General styling adjustments and fixes
Fixed issue of background colour being uneven depending on column content. Removed unused style sheets.

--- a/client/static/css/attractions.css
+++ b/client/static/css/attractions.css
@@ -6,18 +6,6 @@ div {
     width: 100%;
 }
 
-.internalnav {
-    border: 2px solid #7ea5e5;
-    background-color: #7ea5e5;
-    border-radius: 50px;
-    padding: 5px;
-    font-size: 18px;
-    text-decoration: none;
-    color: black;
-    font-family: Arial;
-}
-
-.internalnav:hover {
-    background-color: #5f7daf;
-    border-color: #5f7daf;
+iframe {
+    frameborder: 0;
 }
