--- a/client/static/css/hotelSite.css
+++ b/client/static/css/hotelSite.css
@@ -43,7 +43,7 @@ header {
 
 /* Page content syling */
 
-p {
+p, li {
     font-size: 16px;
     font-family: Times New Roman;
 }
@@ -52,9 +52,9 @@ h1, h2, h3, h4, h5, h6 {
     font-family: Arial;
 }
 
-li {
-    font-size: 12px;
-    font-family: Times New Roman;
+h2, h3 {
+    background-color: #7ea5e5;
+    padding: 10px;
 }
 
 body {
@@ -63,21 +63,33 @@ body {
     padding-right: 20px;
 }
 
-.column {width:50%;display:inline-block;background-color: #eaf2ff;}
+.column {width:50%;display:inline-block;background-color: #eaf2ff; display: table-cell;}
 .column:first-of-type {float: left;}
 .column:last-of-type {float: right;}
 .column>*{margin-left: 5%;margin-right: 5%;max-width:90%;}
 .column>*:first-child{margin-top: 5%;}
 .column>*:last-child{margin-bottom: 5%;}
 
-h2, h3 {
-    background-color: #7ea5e5;
-    padding: 10px;
-}
-
 .row {
     background-color: #eaf2ff;
+    display: table;
+    width:100%;
 }
 
+.internalnav {
+    border: 2px solid #7ea5e5;
+    background-color: #7ea5e5;
+    border-radius: 50px;
+    padding: 5px;
+    font-size: 18px;
+    text-decoration: none;
+    color: black;
+    font-family: Arial;
+}
+
+.internalnav:hover {
+    background-color: #5f7daf;
+    border-color: #5f7daf;
+}
 
 
